feat: add payments route
